Cambiamos la dirección de la imágen a Flickr

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <ul class="nav-left">
-                <li class="imagen"> <a href="#"><img src="https://s.gravatar.com/avatar/41a6a55db68625bea9dc0f6a57de357a?s=80" alt="Imagen de perfil"></a></li>
+                <li class="imagen"> <a href="#"><img src="https://www.flickr.com/photos/194734173@N05/shares/B7LU31" alt="Imagen de perfil"></a></li>
                 <li class="nombre"> <a href="#"> <b>Cristian Daniel Muñoz Botero</b> </a></li>
             </ul>
             <ul class="nav-right">
@@ -33,7 +33,7 @@
             <div class="card-container">
                 <div class="foto">
                     <a href="">
-                        <img src="https://s.gravatar.com/avatar/41a6a55db68625bea9dc0f6a57de357a?s=80" alt="Foto de perfil">
+                        <img src="https://www.flickr.com/photos/194734173@N05/shares/B7LU31" alt="Foto de perfil">
                     </a>
                     <h2>Cristian Daniel Muñoz Botero</h2>
                     <h4>Desarrollador de software</h4>
