Cambiamos la imágen a local

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <ul class="nav-left">
-                <li class="imagen"> <a href="#"><img src="https://www.flickr.com/photos/194734173@N05/shares/B7LU31" alt="Imagen de perfil"></a></li>
+                <li class="imagen"> <a href="#"><img src="img/3.jpg" alt="Imagen de perfil"></a></li>
                 <li class="nombre"> <a href="#"> <b>Cristian Daniel Muñoz Botero</b> </a></li>
             </ul>
             <ul class="nav-right">
@@ -33,13 +33,15 @@
             <div class="card-container">
                 <div class="foto">
                     <a href="">
-                        <img src="https://www.flickr.com/photos/194734173@N05/shares/B7LU31" alt="Foto de perfil">
+                        <img src="img/3.jpg" alt="Foto de perfil">
                     </a>
                     <h2>Cristian Daniel Muñoz Botero</h2>
                     <h4>Desarrollador de software</h4>
                 </div>
                 <div class="datos">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, rerum quidem nulla laboriosam non temporibus nostrum quaerat quisquam id deleniti aliquam similique voluptatibus repellat mollitia praesentium? Exercitationem labore quaerat nulla.</p>
+                    <p><b>Cristian Daniel Muñoz Botero</b></p>
+                    <p>Técnico profesional por competencias en sistemas informáticos</p>
+                    <p><b>Cetasdi</b></p>
 
                     <div class="social">
                         <a href="#"><i class="bi bi-facebook"></i></a>
