Creamos los 2 archivos de contact y skills. Y agregamos información a la tarjeta. Faltan los links de las redes sociales

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
                 <li class="nombre"> <a href="#"> <b>Cristian Daniel Muñoz Botero</b> </a></li>
             </ul>
             <ul class="nav-right">
-                <li> <a href="#"> <b>INICIO</b> </a></li>
-                <li> <a href="#"> <b>CONOCIMIENTOS</b> </a></li>
-                <li> <a href="#"> <b>HABILIDADES</b> </a></li>
-                <li> <a href="#"> <b>CONTACTO</b> </a></li>
+                <li> <a href="index.html"> <b>INICIO</b> </a></li>
+                <li> <a href="skills.html"> <b>CONOCIMIENTOS Y HABILIDADES</b> </a></li>
+                <li> <a href="contact.html"> <b>CONTACTO</b> </a></li>
             </ul>
         </nav>
         
@@ -32,7 +31,7 @@
         <div class="container">
             <div class="card-container">
                 <div class="foto">
-                    <a href="">
+                    <a href="contact.html">
                         <img src="img/1.jpg" alt="Foto de perfil">
                     </a>
                     <h2>Cristian Daniel Muñoz Botero</h2>
@@ -40,8 +39,12 @@
                 </div>
                 <div class="datos">
                     <p><b>Cristian Daniel Muñoz Botero</b></p>
+                    <p>20 Años</p>
                     <p>Técnico profesional por competencias en sistemas informáticos</p>
                     <p><b>Cetasdi</b></p>
+                    <p>Estudiante de ingeniería de sistemas</p>
+                    <p>Segundo semestre</p>
+                    <p><b>Universidad de Antioquia</b></p>
 
                     <div class="social">
                         <a href="#"><i class="bi bi-facebook"></i></a>
@@ -50,7 +53,9 @@
                     </div>
                 </div>
             </div>
+            <div><h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni perspiciatis, aliquam sint ab accusantium maiores consequatur saepe dolor quaerat cum iste cumque quas ipsum optio, doloremque aspernatur quos doloribus labore architecto quam rerum obcaecati? Quae, obcaecati? Dolore, accusamus. Natus vero facere ipsam odit, necessitatibus ipsum recusandae quo tenetur rerum commodi impedit mollitia placeat. Inventore, ea commodi? Excepturi dolor necessitatibus mollitia odit corporis esse tempora neque, quae soluta, enim vitae quos. Ipsa vel voluptatibus modi facilis perferendis at autem, fuga facere culpa assumenda magni! Enim modi rerum, nostrum, sunt praesentium necessitatibus neque eius sint dolorum corrupti aliquam et eveniet eaque incidunt.</h2></div>
         </div>
+
     </main>
 
     <footer>
