Le mejoramos los colores

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                     </div>
                 </div>
             </div>
-            <div><h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni perspiciatis, aliquam sint ab accusantium maiores consequatur saepe dolor quaerat cum iste cumque quas ipsum optio, doloremque aspernatur quos doloribus labore architecto quam rerum obcaecati? Quae, obcaecati? Dolore, accusamus. Natus vero facere ipsam odit, necessitatibus ipsum recusandae quo tenetur rerum commodi impedit mollitia placeat. Inventore, ea commodi? Excepturi dolor necessitatibus mollitia odit corporis esse tempora neque, quae soluta, enim vitae quos. Ipsa vel voluptatibus modi facilis perferendis at autem, fuga facere culpa assumenda magni! Enim modi rerum, nostrum, sunt praesentium necessitatibus neque eius sint dolorum corrupti aliquam et eveniet eaque incidunt.</h2></div>
+            <div class="column-2"><h2>Bienvenidos. </h2>
+                <p><b>Mi nombre es Cristian Daniel Muñoz Botero. Nací el 28 de febrero de 2001 en el municipio de Abejorral, Antioquia. (Colombia)</p>
+                    <p>Soy técnico profesional por competencias en sistemas informáticos Egresado de Cetasdi (Rionegro, Antioquia). He ejercido esta profesión 3 veces en mi vida. Al día de hoy me dedico tiempo completo a estudiar ingeniería de sistemas en la Universidad de Antioquia</b> </p>
+            </div>
         </div>
 
     </main>
