Agregamos nueva foto, un renglón de información. Abajo agregamos exp académica y laboral

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <ul class="nav-left">
-                <li class="imagen"> <a href="#"><img src="img/1.jpg" alt="Imagen de perfil"></a></li>
+                <li class="imagen"> <a href="#"><img src="img/4.jpg" alt="Imagen de perfil"></a></li>
                 <li class="nombre"> <a href="#"> <b>Cristian Daniel Muñoz Botero</b> </a></li>
             </ul>
             <ul class="nav-right">
@@ -32,7 +32,7 @@
             <div class="card-container">
                 <div class="foto">
                     <a href="contact.html">
-                        <img src="img/1.jpg" alt="Foto de perfil">
+                        <img src="img/4.jpg" alt="Foto de perfil">
                     </a>
                     <h2>Cristian Daniel Muñoz Botero</h2>
                     <h4>Desarrollador de software</h4>
@@ -47,7 +47,7 @@
                     <p><b>Universidad de Antioquia</b></p>
 
                     <div class="social">
-                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.facebook.com/Cristiandmb1/"><i class="bi bi-facebook"></i></a>
                         <a href="#"><i class="bi bi-instagram"></i></a>
                         <a href="#"><i class="bi bi-linkedin"></i></a>
                     </div>
@@ -56,9 +56,82 @@
             <div class="column-2"><h2>Bienvenidos. </h2>
                 <p><b>Mi nombre es Cristian Daniel Muñoz Botero. Nací el 28 de febrero de 2001 en el municipio de Abejorral, Antioquia. (Colombia)</p>
                     <p>Soy técnico profesional por competencias en sistemas informáticos Egresado de Cetasdi (Rionegro, Antioquia). He ejercido esta profesión 3 veces en mi vida. Al día de hoy me dedico tiempo completo a estudiar ingeniería de sistemas en la Universidad de Antioquia</b> </p>
+                <p> <b>Soy una persona la cual desde pequeña ha mostrado siempre gran aptitud por la tecnología, las matemáticas y la ingeniería.</b>  </p>
             </div>
         </div>
+        <div class="exp-acad">
+            <h1>Experiencia académica</h1>
+            <h3 class="rojo">Educación primaria</h3>
+            <p class="negro"> <b>Preescolar:</b>  2006 (1 año)</p>
+            <p class="negro"> <b>Primero a Quinto:</b>  2007 - 2011 (5 años)</p>
+            <p class="negro"> <b>Institución educativa Bernardo Uribe Londoño (La Ceja, Antioquia)</b></p>
 
+            <h3 class="rojo">Educación secundaria</h3>
+            <p class="negro"> <b>Sexto a Noveno:</b>  2012 - 2015 (4 años)</p>
+            <p class="negro"> <b>Institución educativa Bernardo Uribe Londoño (La Ceja, Antioquia)</b></p>
+
+            <h3 class="rojo">Educación media</h3>
+            <p class="negro"> <b>Décimo a Undécimo:</b>  2016 - 2017 (2 años)</p>
+            <p class="negro"> <b>Institución educativa Bernardo Uribe Londoño (La Ceja, Antioquia)</b></p>
+
+            <h3 class="rojo">Educación técnica</h3>
+            <p class="negro"> <b>Primer a Cuarto semestre</b>  2018 - 2019 (2 años)</p>
+            <p class="negro"> <b>Instituto técnico Cetasdi (Rionegro, Antioquia)</b></p>
+
+            <h3 class="rojo">Educación Universitaria</h3>
+            <p class="negro"> <b>Primer semestre</b>  2020 (6 meses)</p>
+            <p class="negro"> <b>Universidad Remington (Rionegro, Antioquia)</b></p>
+
+            <h3 class="rojo">Educación Universitaria</h3>
+            <p class="negro"> <b>Primer y segundo semestre</b>  2021 (Actualmente)</p>
+            <p class="negro"> <b>Universidad de Antioquia (Medellín, Antioquia)</b></p>
+        </div>
+
+        <div class="exp-laboral">
+            <h2>Experiencia laboral</h2>
+            <table class="exp-lab">
+                <tr>
+                    <td>Tipo de contrato</td>
+                    <td>Empresa</td>
+                    <td>Desde</td>
+                    <td>Hasta</td>
+                    <td>Cargo</td>
+                    <td>Funciones</td>
+                </tr>
+                <tr>
+                    <td>Prácticas empresariales</td>
+                    <td>Unisys (UTS Rionegro)</td>
+                    <td>Mayo 2019</td>
+                    <td>Noviembre 2019</td>
+                    <td>UTS Trainee II</td>
+                    <td>Hoja de vida</td>
+                </tr>
+                <tr>
+                    <td>Contrato término fijo (1 año)</td>
+                    <td>Unisys (UTS Rionegro)</td>
+                    <td>Noviembre 2019</td>
+                    <td>Mayo 2020</td>
+                    <td>UTS Technical Support Report 3</td>
+                    <td>Hoja de vida</td>
+                </tr>
+                <tr>
+                    <td>Contrato por obra y labor</td>
+                    <td>Consulting Data Systems</td>
+                    <td>Noviembre 2020</td>
+                    <td>Noviembre 2020</td>
+                    <td>Técnico de soporte en sitio</td>
+                    <td>Brindar soporte técnico en sitio a la base aérea CACOM-5 del ejército colombiano, realizando mantenimiento preventivo a los equipos de cómputo en toda la base. Realizaba limpieza interna y externa de los equipos, verificando su funcionamiento. Se llevaba manejo del inventario de los equipos realizados en el día, para tener el registro de actividad, cumpliendo con 10 equipos diarios.</td>
+                </tr>
+                <tr>
+                    <td>Contrato término indefinido</td>
+                    <td>1Cero1 software</td>
+                    <td>Enero 2021</td>
+                    <td>Marzo 2021</td>
+                    <td>Desarrollador Full-stack Junior</td>
+                    <td>Desarrollar páginas de municipios referentes a trámites de las entidades, con recaudo y sin recaudo. Desarrollar el módulo de PQRDS de los municipios asignados. Brindar mantenimiento a estos portales, referente a lo que nos indique el cliente. Realizar los ajustes correspondientes, agregar o quitar trámites, solicitudes. Brindar soporte a los funcionarios de las alcaldías con respecto al módulo de gestión de las solicitudes. Capacitar a los funcionarios cada que lo requieran para que manejen correctamente el portal web y los módulos de PQRDS y trámites. Los desarrollos se realizan en C#, ASP.NET, se utiliza SQL Server, Visual Studio Code 2019, y la plataforma de gestión y de trabajo es Microsoft Sharepoint. Los trámites con recaudo se manejan en conjunto con Bancolombia.</td>
+                </tr>
+            </table>
+        </div>
     </main>
 
     <footer>
