Agregamos la información de experiencias en tablas para que quedara organizado#

--- a/index.html
+++ b/index.html
@@ -60,43 +60,71 @@
             </div>
         </div>
         <div class="exp-acad">
-            <h1>Experiencia académica</h1>
-            <h3 class="rojo">Educación primaria</h3>
-            <p class="negro"> <b>Preescolar:</b>  2006 (1 año)</p>
-            <p class="negro"> <b>Primero a Quinto:</b>  2007 - 2011 (5 años)</p>
-            <p class="negro"> <b>Institución educativa Bernardo Uribe Londoño (La Ceja, Antioquia)</b></p>
-
-            <h3 class="rojo">Educación secundaria</h3>
-            <p class="negro"> <b>Sexto a Noveno:</b>  2012 - 2015 (4 años)</p>
-            <p class="negro"> <b>Institución educativa Bernardo Uribe Londoño (La Ceja, Antioquia)</b></p>
-
-            <h3 class="rojo">Educación media</h3>
-            <p class="negro"> <b>Décimo a Undécimo:</b>  2016 - 2017 (2 años)</p>
-            <p class="negro"> <b>Institución educativa Bernardo Uribe Londoño (La Ceja, Antioquia)</b></p>
-
-            <h3 class="rojo">Educación técnica</h3>
-            <p class="negro"> <b>Primer a Cuarto semestre</b>  2018 - 2019 (2 años)</p>
-            <p class="negro"> <b>Instituto técnico Cetasdi (Rionegro, Antioquia)</b></p>
-
-            <h3 class="rojo">Educación Universitaria</h3>
-            <p class="negro"> <b>Primer semestre</b>  2020 (6 meses)</p>
-            <p class="negro"> <b>Universidad Remington (Rionegro, Antioquia)</b></p>
-
-            <h3 class="rojo">Educación Universitaria</h3>
-            <p class="negro"> <b>Primer y segundo semestre</b>  2021 (Actualmente)</p>
-            <p class="negro"> <b>Universidad de Antioquia (Medellín, Antioquia)</b></p>
-        </div>
+            
+            <table class="exp-academica">
+                <tr>
+                    <h1>Experiencia académica</h1>
+                    <td> <h3>EDUCACIÓN</h3> </td>
+                    <td><h3>GRADOS CURSADOS</h3></td>
+                    <td><h3>AÑO</h3></td>
+                    <td><h3>INSTITUCIÓN EDUCATIVA</h3></td>
+                    <td><h3>MUNICIPIO</h3></td>
+                </tr>
+                <tr>
+                    <td>Primaria</td>
+                    <td>Preescolar a Quinto</td>
+                    <td>2006-2011</td>
+                    <td>Bernardo Uribe Londoño</td>
+                    <td>La Ceja, Antioquia</td>
+                </tr>
+                <tr>
+                    <td>Secundaria</td>
+                    <td>Sexto a Noveno</td>
+                    <td>2012 - 2015</td>
+                    <td>Bernardo Uribe Londoño</td>
+                    <td>La Ceja, Antioquia</td>
+                </tr>
+                <tr>
+                    <td>Media</td>
+                    <td>Décimo a Undécimo</td>
+                    <td>2016 - 2017</td>
+                    <td>Bernardo Uribe Londoño</td>
+                    <td>La Ceja, Antioquia</td>
+                </tr>
+                <tr>
+                    <td>Técnica</td>
+                    <td>Primer a Cuarto semestre</td>
+                    <td>2018 - 2019</td>
+                    <td>Instituto técnico Cetasdi</td>
+                    <td>Rionegro, Antioquia</td>
+                </tr>
+                <tr>
+                    <td>Universitaria</td>
+                    <td>Primer semestre</td>
+                    <td>2020</td>
+                    <td>Universidad Remington</td>
+                    <td>Rionegro, Antioquia</td>
+                </tr>
+                <tr>
+                    <td>Universitaria</td>
+                    <td>Primer y segundo semestre</td>
+                    <td>2021 - Actualmente</td>
+                    <td>Universidad de Antioquia</td>
+                    <td>Medellín, Antioquia</td>
+                </tr>
+            </table>
+            </div>
 
         <div class="exp-laboral">
-            <h2>Experiencia laboral</h2>
+            <h1>Experiencia laboral</h1>
             <table class="exp-lab">
                 <tr>
-                    <td>Tipo de contrato</td>
-                    <td>Empresa</td>
-                    <td>Desde</td>
-                    <td>Hasta</td>
-                    <td>Cargo</td>
-                    <td>Funciones</td>
+                    <td><h3>TIPO DE CONTRATO</h3></td>
+                    <td><h3>EMPRESA</h3></td>
+                    <td><h3>DESDE</h3></td>
+                    <td><h3>HASTA</h3></td>
+                    <td><h3>CARGO</h3></td>
+                    <td><h3>FUNCIONES</h3></td>
                 </tr>
                 <tr>
                     <td>Prácticas empresariales</td>
