Empezamos la rama bs para agregarle estilos bootstrap a la pagina

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="exp-acad">
-            
+            <h1>Prueba cambio de ramas</h1>
             <table class="exp-academica">
                 <tr>
                     <h1>Experiencia académica</h1>
