--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
     <title>Cristian Muñoz</title>
 </head>
-<body class="home">
-<header class="header">
+<body>
     <!--BARRA DE NAVEGACIÓN-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -50,13 +49,11 @@
               </li>
             </ul>
             <ul class="navbar-nav ms auto">
-                <button class="btn">Descarga mi hoja de vida</button>
+                <button class="btn">Descarga mi CV</button>
             </ul>
           </div>
         </div>
       </nav>
-    </header>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
     
