--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link href="/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 
     <!--MIS ESTILOS-->
     <link rel="stylesheet" href="/css/main.css">
@@ -54,7 +54,7 @@
           </div>
         </div>
       </nav>
-    <script src="/bootstrap-5.1.3-dist/js/bootstrap.bundle.js" ></script>
+    <script src="/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
     
 </html>
