AGREGAMOS EXPERIENCIA ACAD AND LABORAL SHNWUISBW# Your branch is up to date with 'origin/master'.  #

--- a/index.html
+++ b/index.html
@@ -58,7 +58,122 @@
         </div>
       </nav>
       
-      <!--TARJETA DE PRESENTACIÓN-->
+      <!--EXPERIENCIA ACADÉMICA-->
+
+      <h2 class="display-6" style="text-align: center; color: rgb(68, 68, 68);">EXPERIENCIA ACADÉMICA</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Grado educativo</th>
+            <th scope="col">Institución Educativa</th>
+            <th scope="col">Ubicación</th>
+            <th scope="col">Tiempo cursado</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Educación primaria</th>
+            <td>Bernando Uribe Londoño</td>
+            <td>La Ceja, Antioquia</td>
+            <td>2006 - 2011</td>
+          </tr>
+          <tr>
+            <th scope="row">Educación secundaria</th>
+            <td>Bernando Uribe Londoño</td>
+            <td>La Ceja, Antioquia</td>
+            <td>2012 - 2015</td>
+          </tr>
+          <tr>
+            <th scope="row">Educación media</th>
+            <td>Bernando Uribe Londoño</td>
+            <td>La Ceja, Antioquia</td>
+            <td>2016 - 2017</td>
+          </tr>
+          <tr>
+            <th scope="row">Educación técnica</th>
+            <td>Cetasdi</td>
+            <td>Rionegro, Antioquia</td>
+            <td>2018 - 2019</td>
+          </tr>
+          <tr>
+            <th scope="row">Educación universitaria</th>
+            <td>UniRemington</td>
+            <td>Rionegro, Antioquia</td>
+            <td>2020 (Primer semestre)</td>
+          </tr>
+          <tr>
+            <th scope="row">Educación universitaria</th>
+            <td>Universidad de Antioquia</td>
+            <td>Medellín, Antioquia</td>
+            <td>2021 - Actualmente</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <!--EXPERIENCIA LABORAL -->
+      <h2 class="display-6" style="text-align: center; color: rgb(68, 68, 68);">EXPERIENCIA LABORAL</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Tipo de contrato</th>
+            <th scope="col">Empresa</th>
+            <th scope="col">Cargo</th>
+            <th scope="col">Funciones</th>
+            <th scope="col">Laborado desde</th>
+            <th scope="col">Hasta</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Prácticas académicas</th>
+            <td>UTS Rionegro (Unisys)</td>
+            <td>UTS Trainne II (Practicante)</td>
+            <td>Ir a -Hoja de vida-</td>
+            <td>05/2019</td>
+            <td>11/2019</td>
+          </tr>
+            <th scope="row">Contrato a término fijo</th>
+            <td>UTS Rionegro (Unisys)</td>
+            <td>UTS Technical support report 3</td>
+            <td>Ir a -Hoja de vida-</td>
+            <td>11/2019</td>
+            <td>05/2020</td>
+          </tr>
+          <tr>
+            <th scope="row">Contrato por obra y labor</th>
+            <td>Consulting Data Systems</td>
+            <td>Técnico de sistemas (Soporte en sitio)</td>
+            <td><p>
+              <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">
+                Funciones
+              </button>
+            </p>
+            <div class="collapse" id="collapseExample1">
+              <div class="card card-body">
+                Brindar soporte técnico en sitio a la base aérea CACOM-5 del ejército colombiano, realizando mantenimiento preventivo a los equipos de cómputo en toda la base. Realizaba limpieza interna y externa de los equipos, verificando su funcionamiento. Se llevaba manejo del inventario de los equipos realizados en el día, para tener el registro de actividad, cumpliendo con 10 equipos diarios.              </div>
+            </div></td> 
+            <td>11/2020</td>
+            <td>11/2020</td>
+          </tr>
+          <tr>
+            <th scope="row">Contrato a término indefinido</th>
+            <td>1Cero1 Software</td>
+            <td>Desarrollador de software Junior (Fullstack)</td>
+            <td><p>
+              <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                Funciones
+              </button>
+            </p>
+            <div class="collapse" id="collapseExample">
+              <div class="card card-body">
+                Desarrollar páginas de municipios referentes a trámites de las entidades, con recaudo y sin recaudo. Desarrollar el módulo de PQRDS de los municipios asignados. Brindar mantenimiento a estos portales, referente a lo que nos indique el cliente. Realizar los ajustes correspondientes, agregar o quitar trámites, solicitudes. Brindar soporte a los funcionarios de las alcaldías con respecto al módulo de gestión de las solicitudes. Capacitar a los funcionarios cada que lo requieran para que manejen correctamente el portal web y los módulos de PQRDS y trámites. Los desarrollos se realizan en C#, ASP.NET, se utiliza SQL Server, Visual Studio Code 2019, y la plataforma de gestión y de trabajo es Microsoft Sharepoint. Los trámites con recaudo se manejan en conjunto con Bancolombia.
+              </div>
+            </div></td>
+            <td>11/2020</td>
+            <td>11/2020</td>
+          </tr>
+        </tbody>
+      </table>
     </main>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
