Cambiamos los estilos de la imágen

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <!--PRESENTACIÓN------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4" style="text-align: center;">
               <img src="/img/1.jpg" class="fluid-image" alt="Foto de perfil" width="75%">
             </div>
             <div class="col-md-8" style="text-align: center;">
@@ -79,9 +79,6 @@
               <p><b>Desarrollador de software</b></p>
               <p><b>Actual estudiante de ingeniería de sistemas</b></p>
               <p>UdeA</p>
-            </div>
-            <div class="col-md-auto">
-
             </div>
           </div>
         </div>
