Realizamos retoques a las tablas para ajustar el responsive

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
         </div>
 
-
+<hr>
       <!--DIVISOR DE COLUMNAS DE EXPERIENCIAS-------------------------------------------------------------------------------------------------------------------------------------------------->
       <div class="container">
         <div class="row">
@@ -99,7 +99,6 @@
           <tr>
             <th scope="col">Nivel</th>
             <th scope="col">Institución Educativa</th>
-            <th scope="col">Ubicación</th>
             <th scope="col">Tiempo cursado</th>
           </tr>
         </thead>
@@ -107,38 +106,32 @@
           <tr>
             <th scope="row">Primaria</th>
             <td>Bernando Uribe Londoño</td>
-            <td>La Ceja, Antioquia</td>
             <td>2006 - 2011</td>
           </tr>
           <tr>
             <th scope="row">Secundaria</th>
             <td>Bernando Uribe Londoño</td>
-            <td>La Ceja, Antioquia</td>
             <td>2012 - 2015</td>
           </tr>
           <tr>
             <th scope="row">Media</th>
             <td>Bernando Uribe Londoño</td>
-            <td>La Ceja, Antioquia</td>
             <td>2016 - 2017</td>
           </tr>
           <tr>
             <th scope="row">Técnica</th>
             <td>Cetasdi</td>
-            <td>Rionegro, Antioquia</td>
             <td>2018 - 2019</td>
           </tr>
           <tr>
             <th scope="row">Universidad</th>
             <td>UniRemington</td>
-            <td>Rionegro, Antioquia</td>
-            <td>2020 (Primer semestre)</td>
+            <td>2020</td>
           </tr>
           <tr>
             <th scope="row">Universitad</th>
             <td>Universidad de Antioquia</td>
-            <td>Medellín, Antioquia</td>
-            <td>2021 - Actualmente</td>
+            <td>2021 - Actual</td>
           </tr>
         </tbody>
       </table>
@@ -164,7 +157,6 @@
                 <!--CABECERA-->
                 <thead>
                   <tr>
-                    <th scope="col">Contrato</th>
                     <th scope="col">Empresa</th>
                     <th scope="col">Cargo</th>
                     <th scope="col">Funciones</th>
@@ -177,24 +169,21 @@
 
                   <!--PRACTICAS-->
                   <tr>
-                    <th scope="row">Prácticas</th>
                     <td>UTS Rionegro</td>
                     <td>Practicante</td>
                     <td>Hoja de vida</td>
-                    <td>05/2019 - 11/2019</td>
+                    <td>6 Meses</td>
                   </tr>
 
                   <!--UTS-->
-                    <th scope="row">Fijo</th>
                     <td>UTS Rionegro</td>
                     <td>UTS TSR 3</td>
                     <td>Hoja de vida</td>
-                    <td>11/2019 - 05/2020</td>
+                    <td>5 Meses</td>
                   </tr>
 
                   <!--CDS-->
                   <tr>
-                    <th scope="row">Obra y labor</th>
                     <td>CDS</td>
                     <td>Técnico de sistemas</td>
                     <td>
@@ -227,12 +216,11 @@
                         </div>
                       </div>
                     </td>
-                    <td>11/2020 - 11/2020</td>
+                    <td>16 días</td>
                   </tr>
 
                   <!--1CERO1-->
                   <tr>
-                    <th scope="row">Indefinido</th>
                     <td>1Cero1 Software</td>
                     <td>Desarrollador Junior</td>
                     <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
@@ -261,7 +249,7 @@
                       </div>
                     </div>
                   </td>
-                    <td>01/2021 - 03/2021</td>
+                    <td>3 meses</td>
                   </tr>
                 </tbody>
               </table>
